Added canvas, map, search. Missing creative addition

--- a/client/main.css
+++ b/client/main.css
@@ -1,1 +1,10 @@
 /* CSS declarations go here */
+canvas {
+	position: relative;
+	z-index: 2;
+}
+
+.colombiaMap {
+	position: absolute;
+    top: 0;
+}
